--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.8",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "graphql": "^16.8.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.0",
